bindings/resvg-qt/src/ffi.rs

#[test]
fn bindgen_test_layout_qtc_transform() {
    assert_eq!(
        ::std::mem::size_of::<qtc_transform>(),
        48usize,
        concat!("Size of: ", stringify!(qtc_transform))
    );
    assert_eq!(
        ::std::mem::align_of::<qtc_transform>(),
        8usize,
        concat!("Alignment of ", stringify!(qtc_transform))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<qtc_transform>())).a as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(qtc_transform),
            "::",
            stringify!(a)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<qtc_transform>())).b as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(qtc_transform),
            "::",
            stringify!(b)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<qtc_transform>())).c as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(qtc_transform),
            "::",
            stringify!(c)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<qtc_transform>())).d as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(qtc_transform),
            "::",
            stringify!(d)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<qtc_transform>())).e as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(qtc_transform),
            "::",
            stringify!(e)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<qtc_transform>())).f as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(qtc_transform),
            "::",
            stringify!(f)
        )
    );
}
pub const PenCapStyle_FlatCap: PenCapStyle = 0;
pub const PenCapStyle_SquareCap: PenCapStyle = 16;
pub const PenCapStyle_RoundCap: PenCapStyle = 32;
pub type PenCapStyle = u32;
pub const PenJoinStyle_BevelJoin: PenJoinStyle = 64;
pub const PenJoinStyle_RoundJoin: PenJoinStyle = 128;
pub const PenJoinStyle_MiterJoin: PenJoinStyle = 256;
pub type PenJoinStyle = u32;
pub const FillRule_OddEvenFill: FillRule = 0;
pub const FillRule_WindingFill: FillRule = 1;
pub type FillRule = u32;
pub const Spread_PadSpread: Spread = 0;
pub const Spread_ReflectSpread: Spread = 1;
pub const Spread_RepeatSpread: Spread = 2;
pub type Spread = u32;
pub const CompositionMode_CompositionMode_SourceOver: CompositionMode = 0;
pub const CompositionMode_CompositionMode_DestinationOver: CompositionMode = 1;
pub const CompositionMode_CompositionMode_Clear: CompositionMode = 2;
pub const CompositionMode_CompositionMode_Source: CompositionMode = 3;
pub const CompositionMode_CompositionMode_Destination: CompositionMode = 4;
pub const CompositionMode_CompositionMode_SourceIn: CompositionMode = 5;
pub const CompositionMode_CompositionMode_DestinationIn: CompositionMode = 6;
pub const CompositionMode_CompositionMode_SourceOut: CompositionMode = 7;
pub const CompositionMode_CompositionMode_DestinationOut: CompositionMode = 8;
pub const CompositionMode_CompositionMode_SourceAtop: CompositionMode = 9;
pub const CompositionMode_CompositionMode_DestinationAtop: CompositionMode = 10;
pub const CompositionMode_CompositionMode_Xor: CompositionMode = 11;
pub const CompositionMode_CompositionMode_Plus: CompositionMode = 12;
pub const CompositionMode_CompositionMode_Multiply: CompositionMode = 13;
pub const CompositionMode_CompositionMode_Screen: CompositionMode = 14;
pub const CompositionMode_CompositionMode_Overlay: CompositionMode = 15;
pub const CompositionMode_CompositionMode_Darken: CompositionMode = 16;
pub const CompositionMode_CompositionMode_Lighten: CompositionMode = 17;
pub const CompositionMode_CompositionMode_ColorDodge: CompositionMode = 18;
pub const CompositionMode_CompositionMode_ColorBurn: CompositionMode = 19;
pub const CompositionMode_CompositionMode_HardLight: CompositionMode = 20;
pub const CompositionMode_CompositionMode_SoftLight: CompositionMode = 21;
pub const CompositionMode_CompositionMode_Difference: CompositionMode = 22;
pub const CompositionMode_CompositionMode_Exclusion: CompositionMode = 23;
pub type CompositionMode = u32;
pub const AspectRatioMode_IgnoreAspectRatio: AspectRatioMode = 0;
pub const AspectRatioMode_KeepAspectRatio: AspectRatioMode = 1;
pub const AspectRatioMode_KeepAspectRatioByExpanding: AspectRatioMode = 2;
pub type AspectRatioMode = u32;
extern "C" {
    pub fn qtc_qimage_create_rgba_premultiplied(width: u32, height: u32) -> *mut qtc_qimage;
}
extern "C" {
    pub fn qtc_qimage_create_rgba(width: u32, height: u32) -> *mut qtc_qimage;
}
extern "C" {
    pub fn qtc_qimage_get_data(c_img: *mut qtc_qimage) -> *mut u8;
}
extern "C" {
    pub fn qtc_qimage_get_size_in_bytes(c_img: *mut qtc_qimage) -> u32;
}
extern "C" {
    pub fn qtc_qimage_resize(
        c_img: *mut qtc_qimage,
        width: u32,
        height: u32,
        ratio: AspectRatioMode,
        smoothTransformation: bool,
    ) -> *mut qtc_qimage;
}
extern "C" {
    pub fn qtc_qimage_copy(
        c_img: *mut qtc_qimage,
        x: u32,
        y: u32,
        width: u32,
        height: u32,
    ) -> *mut qtc_qimage;
}
extern "C" {
    pub fn qtc_qimage_fill(c_img: *mut qtc_qimage, r: u8, g: u8, b: u8, a: u8);
}
extern "C" {
    pub fn qtc_qimage_to_rgba(c_img: *mut qtc_qimage) -> *mut qtc_qimage;
}
extern "C" {
    pub fn qtc_qimage_get_width(c_img: *mut qtc_qimage) -> u32;
}
extern "C" {
    pub fn qtc_qimage_get_height(c_img: *mut qtc_qimage) -> u32;
}
extern "C" {
    pub fn qtc_qimage_save(c_img: *mut qtc_qimage, path: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    pub fn qtc_qimage_destroy(c_img: *mut qtc_qimage);
}
extern "C" {
    pub fn qtc_qpainter_create(c_img: *mut qtc_qimage) -> *mut qtc_qpainter;
}
extern "C" {
    pub fn qtc_qpainter_set_antialiasing(c_p: *mut qtc_qpainter, flag: bool);
}
extern "C" {
    pub fn qtc_qpainter_set_smooth_pixmap_transform(c_p: *mut qtc_qpainter, flag: bool);
}
extern "C" {
    pub fn qtc_qpainter_set_pen(c_p: *mut qtc_qpainter, c_pen: *mut qtc_qpen);
}
extern "C" {
    pub fn qtc_qpainter_reset_pen(c_p: *mut qtc_qpainter);
}
extern "C" {
    pub fn qtc_qpainter_set_brush(c_p: *mut qtc_qpainter, c_brush: *mut qtc_qbrush);
}
extern "C" {
    pub fn qtc_qpainter_reset_brush(c_p: *mut qtc_qpainter);
}
extern "C" {
    pub fn qtc_qpainter_set_opacity(c_p: *mut qtc_qpainter, opacity: f64);
}
extern "C" {
    pub fn qtc_qpainter_draw_path(c_p: *mut qtc_qpainter, c_pp: *mut qtc_qpainterpath);
}
extern "C" {
    pub fn qtc_qpainter_draw_image(c_p: *mut qtc_qpainter, x: f64, y: f64, c_img: *mut qtc_qimage);
}
extern "C" {
    pub fn qtc_qpainter_draw_image_rect(
        c_p: *mut qtc_qpainter,
        x: f64,
        y: f64,
        w: f64,
        h: f64,
        c_img: *mut qtc_qimage,
    );
}
extern "C" {
    pub fn qtc_qpainter_draw_text(
        c_p: *mut qtc_qpainter,
        x: f64,
        y: f64,
        c_text: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn qtc_qpainter_draw_rect(c_p: *mut qtc_qpainter, x: f64, y: f64, w: f64, h: f64);
}
extern "C" {
    pub fn qtc_qpainter_translate(c_p: *mut qtc_qpainter, tx: f64, ty: f64);
}
extern "C" {
    pub fn qtc_qpainter_scale(c_p: *mut qtc_qpainter, sx: f64, sy: f64);
}
extern "C" {
    pub fn qtc_qpainter_get_transform(c_p: *mut qtc_qpainter) -> *mut qtc_qtransform;
}
extern "C" {
    pub fn qtc_qpainter_set_transform(
        c_p: *mut qtc_qpainter,
        q_ts: *mut qtc_qtransform,
        combine: bool,
    );
}
extern "C" {
    pub fn qtc_qpainter_set_clip_rect(c_p: *mut qtc_qpainter, x: f64, y: f64, w: f64, h: f64);
}
extern "C" {
    pub fn qtc_qpainter_set_clip_path(c_p: *mut qtc_qpainter, c_pp: *mut qtc_qpainterpath);
}
extern "C" {
    pub fn qtc_qpainter_reset_clip_path(c_p: *mut qtc_qpainter);
}
extern "C" {
    pub fn qtc_qpainter_set_composition_mode(c_p: *mut qtc_qpainter, mode: CompositionMode);
}
extern "C" {
    pub fn qtc_qpainter_end(c_p: *mut qtc_qpainter);
}
extern "C" {
    pub fn qtc_qpainter_destroy(c_p: *mut qtc_qpainter);
}
extern "C" {
    pub fn qtc_qpainterpath_create() -> *mut qtc_qpainterpath;
}
extern "C" {
    pub fn qtc_qpainterpath_move_to(c_pp: *mut qtc_qpainterpath, x: f64, y: f64);
}
extern "C" {
    pub fn qtc_qpainterpath_line_to(c_pp: *mut qtc_qpainterpath, x: f64, y: f64);
}
extern "C" {
    pub fn qtc_qpainterpath_curve_to(
        c_pp: *mut qtc_qpainterpath,
        x1: f64,
        y1: f64,
        x2: f64,
        y2: f64,
        x: f64,
        y: f64,
    );
}
extern "C" {
    pub fn qtc_qpainterpath_close_path(c_pp: *mut qtc_qpainterpath);
}
extern "C" {
    pub fn qtc_qpainterpath_set_fill_rule(c_pp: *mut qtc_qpainterpath, rule: FillRule);
}
extern "C" {
    pub fn qtc_qpainterpath_destroy(c_pp: *mut qtc_qpainterpath);
}
extern "C" {
    pub fn qtc_qtransform_create() -> *mut qtc_qtransform;
}
extern "C" {
    pub fn qtc_qtransform_create_from(
        a: f64,
        b: f64,
        c: f64,
        d: f64,
        e: f64,
        f: f64,
    ) -> *mut qtc_qtransform;
}
extern "C" {
    pub fn qtc_qtransform_get_data(c_ts: *mut qtc_qtransform) -> qtc_transform;
}
extern "C" {
    pub fn qtc_qtransform_destroy(c_ts: *mut qtc_qtransform);
}
extern "C" {
    pub fn qtc_qpen_create() -> *mut qtc_qpen;
}
extern "C" {
    pub fn qtc_qpen_set_color(c_pen: *mut qtc_qpen, r: u8, g: u8, b: u8, a: u8);
}
extern "C" {
    pub fn qtc_qpen_set_brush(c_pen: *mut qtc_qpen, c_brush: *mut qtc_qbrush);
}
extern "C" {
    pub fn qtc_qpen_set_line_cap(c_pen: *mut qtc_qpen, s: PenCapStyle);
}
extern "C" {
    pub fn qtc_qpen_set_line_join(c_pen: *mut qtc_qpen, s: PenJoinStyle);
}
extern "C" {
    pub fn qtc_qpen_set_width(c_pen: *mut qtc_qpen, width: f64);
}
extern "C" {
    pub fn qtc_qpen_set_miter_limit(c_pen: *mut qtc_qpen, limit: f64);
}
extern "C" {
    pub fn qtc_qpen_set_dash_offset(c_pen: *mut qtc_qpen, offset: f64);
}
extern "C" {
    pub fn qtc_qpen_set_dash_array(
        c_pen: *mut qtc_qpen,
        array: *const f64,
        len: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn qtc_qpen_destroy(c_pen: *mut qtc_qpen);
}
extern "C" {
    pub fn qtc_qbrush_create() -> *mut qtc_qbrush;
}
extern "C" {
    pub fn qtc_qbrush_set_color(c_brush: *mut qtc_qbrush, r: u8, g: u8, b: u8, a: u8);
}
extern "C" {
    pub fn qtc_qbrush_set_linear_gradient(c_brush: *mut qtc_qbrush, c_lg: *mut qtc_qlineargradient);
}
extern "C" {
    pub fn qtc_qbrush_set_radial_gradient(c_brush: *mut qtc_qbrush, c_rg: *mut qtc_qradialgradient);
}
extern "C" {
    pub fn qtc_qbrush_set_pattern(c_brush: *mut qtc_qbrush, c_img: *mut qtc_qimage);
}
extern "C" {
    pub fn qtc_qbrush_set_transform(c_brush: *mut qtc_qbrush, c_ts: *mut qtc_qtransform);
}
extern "C" {
    pub fn qtc_qbrush_destroy(c_brush: *mut qtc_qbrush);
}
extern "C" {
    pub fn qtc_qlineargradient_create(
        x1: f64,
        y1: f64,
        x2: f64,
        y2: f64,
    ) -> *mut qtc_qlineargradient;
}
extern "C" {
    pub fn qtc_qlineargradient_set_color_at(
        c_lg: *mut qtc_qlineargradient,
        offset: f64,
        r: u8,
        g: u8,
        b: u8,
        a: u8,
    );
}
extern "C" {
    pub fn qtc_qlineargradient_set_spread(c_lg: *mut qtc_qlineargradient, s: Spread);
}
extern "C" {
    pub fn qtc_qlineargradient_destroy(c_lg: *mut qtc_qlineargradient);
}
extern "C" {
    pub fn qtc_qradialgradient_create(
        cx: f64,
        cy: f64,
        fx: f64,
        fy: f64,
        r: f64,
    ) -> *mut qtc_qradialgradient;
}
extern "C" {
    pub fn qtc_qradialgradient_set_color_at(
        c_rg: *mut qtc_qradialgradient,
        offset: f64,
        r: u8,
        g: u8,
        b: u8,
        a: u8,
    );
}
